--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'org.riversun:okhttp3-cookie-helper:1.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.4'
