--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,20 @@
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'java'
+    id "io.franzbecker.gradle-lombok" version "2.0"
 }
+
+apply plugin: 'javafx-gradle-plugin'
 
 group 'me.moonchan.streaming'
 version '1.0-SNAPSHOT'
@@ -14,9 +28,19 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'org.riversun:okhttp3-cookie-helper:1.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.4'
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation 'commons-io:commons-io:2.6'
+
+}
+
+jfx {
+    // minimal requirement for jfxJar-task
+    mainClass = 'me.moonchan.streaming.downloader.Main'
+
+    // minimal requirement for jfxNative-task
+    vendor = 'moonchan'
 }
