--- a/build.gradle
+++ b/build.gradle
@@ -25,14 +25,27 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class':'me.moonchan.streaming.downloader.Main'
+    }
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it :  zipTree(it)
+        }
+    }
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'org.riversun:okhttp3-cookie-helper:1.0.0'
     implementation 'org.apache.httpcomponents:httpclient:4.4'
-    implementation 'io.reactivex:rxjava:1.3.8'
+    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
     implementation 'commons-io:commons-io:2.6'
 
 }
