--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.rootLogger=DEBUG, theConsoleAppender
 # settings for the console appender
 log4j.appender.theConsoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.theConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.theConsoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.theConsoleAppender.layout.ConversionPattern=[%t] %-5p %c %x - %m%n
