--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 buildscript {
+    ext {
+        springBootVersion = '2.1.6.RELEASE'
+        dependencyManagementPluginVersion = '1.0.8.RELEASE'
+        kotlinVersion = "1.3.21"
+        rxjavaVersion = "2.2.2"
+    }
+
     dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("io.spring.gradle:dependency-management-plugin:${dependencyManagementPluginVersion}")
         classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
     }
 
@@ -14,7 +23,8 @@ plugins {
     id "io.franzbecker.gradle-lombok" version "2.0"
 }
 
-apply plugin: 'javafx-gradle-plugin'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group 'me.moonchan.streaming'
 version '1.0-SNAPSHOT'
@@ -25,35 +35,12 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class':'me.moonchan.streaming.downloader.Main'
-    }
-    from {
-        configurations.compile.collect {
-            it.isDirectory() ? it :  zipTree(it)
-        }
-    }
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile 'org.springframework.boot:spring-boot-starter'
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
-    implementation 'org.riversun:okhttp3-cookie-helper:1.0.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.4'
-    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
+    compile "io.reactivex.rxjava2:rxjava:${rxjavaVersion}"
+    compile "io.reactivex.rxjava2:rxjavafx:${rxjavaVersion}"
     implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
-    implementation 'commons-io:commons-io:2.6'
-
-}
-
-jfx {
-    // minimal requirement for jfxJar-task
-    mainClass = 'me.moonchan.streaming.downloader.Main'
-
-    // minimal requirement for jfxNative-task
-    vendor = 'moonchan'
 }
