--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
 
 plugins {
     id 'java'
-    id "io.franzbecker.gradle-lombok" version "2.0"
+    id "io.freefair.lombok" version "3.8.4"
 }
 
 apply plugin: 'org.springframework.boot'
