--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.6.RELEASE'
-        dependencyManagementPluginVersion = '1.0.6.RELEASE'
+        springBootVersion = '2.2.6.RELEASE'
+        dependencyManagementPluginVersion = '1.0.9.RELEASE'
         kotlinVersion = "1.3.21"
         rxjavaVersion = "2.2.2"
     }
@@ -20,27 +20,30 @@ buildscript {
 
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "3.8.4"
 }
 
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
 
-group 'me.moonchan.streaming'
-version '1.0-SNAPSHOT'
+    group 'me.moonchan.streaming-downloader'
+    version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+    sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    compile 'org.springframework.boot:spring-boot-starter'
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.0'
-    compile "io.reactivex.rxjava2:rxjava:${rxjavaVersion}"
-    compile "io.reactivex.rxjava2:rxjavafx:${rxjavaVersion}"
-    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
+    dependencies {
+        compile 'org.springframework.boot:spring-boot-starter'
+        testCompile 'org.springframework.boot:spring-boot-starter-test'
+        //lombok
+        compileOnly 'org.projectlombok:lombok:1.18.12'
+        annotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+        testCompileOnly 'org.projectlombok:lombok:1.18.12'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+    }
 }
