--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-.idea/**/vcs.xml
+.idea
 
 # Generated files
 .idea/**/contentModel.xml
